and keep track of all category-tags.
It DOES NOT substitute the  CVS log-message one should put at every
committal in the CVS repository !

     ----------------------------------------------------------
     * Reverse chronological order (last date on top), please *
     ----------------------------------------------------------

30 April 2015 Gabriele Cosmo (gdml-V10-00-12)
- Fixed non-initialised boolean flag in G4GDMLRead, reported by Coverity.

20 April 2015 Gabriele Cosmo
- Corrected parsing of shape type-ID for MultiUnion in G4GDMLWriteSolids.

16 April 2015 Gabriele Cosmo
- Improved text in G4Exception for failed import of file in G4GDMLRead.

13 April 2015 Witek Pokorski
- Correction for optional stripping of world-volume.

9 April 2015 Gabriele Cosmo
- Added "dichroic" surface model for optical property, consistent with
  addition done in release 10.0.

27 March 2015 Gabriele Cosmo
- Avoid use of standard evaluator for import of units; adopt G4UnitsTable
  instead, in order to avoid loss of precision due to unit's conversion.

24 November 2014 Gabriele Cosmo (gdml-V10-00-11)
- Fixed typo in G4GDMLWriteSolids::BooleanWrite() for the case of repeated
  displacements of the reference solid in the same Boolean operation (issue
  reported by ATLAS).

18 November 2014 Gabriele Cosmo (gdml-V10-00-10)
- Issue exception when attempting to load multi-union structures
  without USolids.

11 November 2014 Makoto Asai (gdml-V10-00-09)
- G4GDMLMessenger: /persistency/gdml/clear now invokes G4RunManager to
  cleanly delete entire geometry.

10 November 2014 Witold Pokorski (gdml-V10-00-08)
- Correction to G4GDMLReadMaterials::MixtureRead() to revert order of
  reading (first elements then materials) for mixtures by fraction;
  corrects referencing for cases when elements and materials may carry
  the same name (case reported by ATLAS).

29 October 2014 Gabriele Cosmo (gdml-V10-00-07)
- Moved USolids module from geometry/solids to externals.
